--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PasoSeguro</string>
+    <string name="SName">Usuario</string>
+    <string name="SPass">Clave</string>
+    <string name="button_enter">Ingresar</string>
 </resources>
