Material Design implementado en antalla de mapa

--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="title_activity_signup">SignupActivity</string>
     <string name="login">Iniciar sesión</string>
     <string name="signup">Registrarse</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="nav_item_profile">Perfil</string>
+    <string name="nav_item_alarm">Activar Alarma</string>
+    <string name="nav_item_custom_filter">Filtro Personalizado</string>
+    <string name="nav_item_danger">Zonas Peligrosas</string>
+    <string name="nav_item_logout">Cerrar Sesión</string>
+    <string name="fast_filter_item_semana">Semana</string>
+    <string name="fast_filter_item_mes">Mes</string>
+    <string name="fast_filter_item_anio">Año</string>
 </resources>
