--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="login">Iniciar sesión</string>
     <string name="signup">Registrarse</string>
 
+    <string name="defaultuser">Usuario</string>
+    <string name="defaultpassword">Contraseña</string>
+    <string name="registrate"><u>¿Eres nuev@? Registrate</u>.</string>
+
     <string name="action_settings">Settings</string>
     <string name="nav_item_profile">Perfil</string>
     <string name="nav_item_alarm">Activar Alarma</string>
