Correciones, Filtro rapido
Correción de tipos de acoso
Filtro rapido funcional
Correción de ingresos de casos( no titulo, no descripcion )

--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="fast_filter_item_mes">Mes</string>
     <string name="fast_filter_item_anio">Año</string>
     <string name="title_activity_case_map">Map</string>
+    <string name="title_activity_my_cases">Map</string>
 
 </resources>
