Danger zones, custom filter

--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -23,7 +23,9 @@
     <string name="fast_filter_item_semana">Semana</string>
     <string name="fast_filter_item_mes">Mes</string>
     <string name="fast_filter_item_anio">Año</string>
+    <string name="fast_filter_item_custom">Personalizado</string>
     <string name="title_activity_case_map">Map</string>
     <string name="title_activity_my_cases">Mis Casos</string>
+    <string name="title_activity_danger_zone">Map</string>
 
 </resources>
