--- a/PasoSeguro/app/src/main/res/values/strings.xml
+++ b/PasoSeguro/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="action_settings">Settings</string>
     <string name="nav_item_profile">Perfil</string>
     <string name="nav_item_my_cases">Mis casos</string>
-    <string name="nav_item_alarm">Activar Alarma</string>
+    <string name="nav_item_alarm">Configurar alarma</string>
     <string name="nav_item_custom_filter">Filtro Personalizado</string>
     <string name="nav_item_danger">Zonas Peligrosas</string>
     <string name="nav_item_logout">Cerrar Sesión</string>
